--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,5 @@
-<mat-toolbar>
-  <h2 routerLink="home">TODOAPP</h2>
-  <nav>
-    <ul>
-      <li><a routerLink="form">REACTIVE FORM</a></li>
-      <li><a routerLink="form"> DRIVEN FORM</a></li>
-    </ul>
-  </nav>
-</mat-toolbar>
+ 
+<app-navbar></app-navbar>
 <router-outlet></router-outlet>
+
+<app-driven></app-driven>
