--- a/src/app/header/navbar/navbar.component.html
+++ b/src/app/header/navbar/navbar.component.html
@@ -1,1 +1,10 @@
-<p>navbar works!</p>
+<mat-toolbar>
+    <h2 routerLink="home">TODOAPP</h2>
+    <nav>
+      <ul>
+        <li><a routerLink="form">REACTIVE FORM</a></li>
+        <li><a routerLink="form-two"> DRIVEN FORM</a></li>
+      </ul>
+    </nav>
+</mat-toolbar>
+  
