--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,7 +2,7 @@
     <h2 [routerLink]="'home'" routerLinkActive="ative">TODOAPP</h2>
     <nav>
       <ul>
-        <li><a [routerLink]="'reactiveform'" routerLinkActive="ative">REACTIVFORM</a></li>
+        <li><a [routerLink]="'reactiveform'" routerLinkActive="ative">REACTIVEFORM</a></li>
         <li><a [routerLink]="'drivenform'" routerLinkActive="ative">DRIVENFORM</a></li>
       </ul>
     </nav>
