--- a/src/app/reativeform/reactiveform/reactiveform.component.html
+++ b/src/app/reativeform/reactiveform/reactiveform.component.html
@@ -1,1 +1,28 @@
-<p>reactiveform works!</p>
+<form [formGroup]="loginForm">
+    <!-- <input type="text" placeholder="username" formControlName="user">
+    <br><br>
+    <input type="text" placeholder="email" formControlName="email">
+    <br><br>
+    <input type="password" placeholder=" password " formControlName="password">
+    <br><br>
+    <button>login</button> -->
+
+    <mat-form-field>
+        <mat-label>Username</mat-label>
+        <input matInput type="text" formControlName="user">
+    </mat-form-field>
+    <mat-form-field>
+        <mat-label>Email</mat-label>
+        <input matInput type="email" formControlName="email"/>
+    </mat-form-field>
+    <mat-form-field>
+        <mat-label>Password</mat-label>
+        <input matInput type="password" formControlName="password">
+    </mat-form-field>
+      
+    <button mat-button >Submit</button>
+
+
+</form>
+
+
