--- a/src/app/drivenform/driven/driven.component.html
+++ b/src/app/drivenform/driven/driven.component.html
@@ -1,10 +1,10 @@
 
 
-<form>
+<form (ngsubmit = "submit()")>
 <mat-form-field>
     <mat-label>Username</mat-label>
     <input matInput type="text" name="user">
-</mat-form-field>
+</mat-form-field> 
 <mat-form-field>
     <mat-label>Email</mat-label>
     <input matInput type="email" name="email"/>
