--- a/src/app/reativeform/reactiveform/reactiveform.component.html
+++ b/src/app/reativeform/reactiveform/reactiveform.component.html
@@ -1,28 +1,86 @@
-<form [formGroup]="loginForm">
+<div class="form-container">
+  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+    <h2>ADD TODO</h2>
+
+    <div
+      style="
+        border-bottom: 1px solid #c6c6c6;
+        margin-top: -16px;
+        margin-bottom: 15px;
+      "
+    ></div>
+
     <!-- <input type="text" placeholder="username" formControlName="user">
-    <br><br>
-    <input type="text" placeholder="email" formControlName="email">
-    <br><br>
-    <input type="password" placeholder=" password " formControlName="password">
-    <br><br>
-    <button>login</button> -->
+            <br><br>
+            <input type="text" placeholder="email" formControlName="email">
+            <br><br>
+            <input type="password" placeholder=" password " formControlName="password">
+            <br><br>
+            <button>login</button> -->
 
-    <mat-form-field>
-        <mat-label>Username</mat-label>
-        <input matInput type="text" formControlName="user">
-    </mat-form-field>
-    <mat-form-field>
-        <mat-label>Email</mat-label>
-        <input matInput type="email" formControlName="email"/>
-    </mat-form-field>
-    <mat-form-field>
-        <mat-label>Password</mat-label>
-        <input matInput type="password" formControlName="password">
-    </mat-form-field>
-      
-    <button mat-button >Submit</button>
+    <div class="full-width">
+      <h4>Title</h4>
+      <mat-form-field>
+        <!-- <mat-label>Username</mat-label> -->
+        <input matInput type="text" formControlName="title" required />
+        <mat-error *ngIf="loginForm.get('title').hasError"
+          >What do you want to do?</mat-error
+        >
+      </mat-form-field>
+    </div>
 
+    <div class="full-width">
+        <h4>Description</h4>
+        <mat-form-field>
+          <!-- <mat-label>Email</mat-label> -->
+          <!-- <input matInput type="email" formControlName="email" required /> -->
+          <textarea matInput placeholder formControlName="description"></textarea>
+          <!-- <mat-error *ngIf="loginForm.get('email').hasError">input email</mat-error> -->
+        </mat-form-field>
 
-</form>
+    </div>
 
+    <div class="full-width">
+        <h4> Deadline</h4>
+        <mat-form-field>
+          <!-- <mat-label>Password</mat-label> -->
+          <!-- <input matInput type="password" formControlName="password" required />
+              <mat-error *ngIf="loginForm.get('password').hasError" -->
+          <!-- >input password</mat-error -->
+          <!-- > -->
+          <input matInput [matDatepicker]="picker" formControlName="dateLine" />
+          <mat-datepicker-toggle
+            matIconSuffix
+            [for]="picker"
+          ></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+    </div>
 
+    <div class="full-width">
+        <h4>Priority</h4>
+        <mat-form-field>
+          <select matNativeControl formControlName="priority">
+            <option value="" selected>ALL</option>
+            <option value="low">Low</option>
+            <option value="medium">Medium</option>
+            <option value="high">High</option>
+            <option value="urgent">Urgent</option>
+          </select>
+        </mat-form-field>
+    </div>
+
+    <div style="border-bottom: 1px solid #c6c6c6; margin: 20px 0"></div>
+    <div style="display: flex; justify-content: end">
+      <button
+        mat-flat-button
+        type="submit"
+        color="primary"
+        [disabled]="loginForm.invalid ? true : loginForm.value ? false : ''"
+        style="width: 100px"
+      >
+        Submit
+      </button>
+    </div>
+  </form>
+</div>
