--- a/src/app/reativeform/reactiveform/reactiveform.component.scss
+++ b/src/app/reativeform/reactiveform/reactiveform.component.scss
@@ -1,17 +1,15 @@
 form{
     display: flex;
     flex-direction: column;
-    margin-top: 29px;
-    
 }
 
-mat-form-field{
+.form-container{
     width: 50%;
-    margin:auto;
-    
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;
+    padding: 20px;
+    margin: 20px auto;
 }
- button{
-    width: 30%;
-    background-color: aqua;
-    margin: auto;
+
+.full-width mat-form-field{
+    width: 100%;
 }
