--- a/src/app/reativeform/reactiveform/reactiveform.component.html
+++ b/src/app/reativeform/reactiveform/reactiveform.component.html
@@ -2,13 +2,13 @@
   <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <h2>ADD TODO</h2>
 
-    <div
+    <div>
       style="
         border-bottom: 1px solid #c6c6c6;
         margin-top: -16px;
         margin-bottom: 15px;
       "
-    ></div>
+    </div>
 
     
 
@@ -31,15 +31,12 @@
     </div>
 
     <div class="full-width">
-  
-     
-
         <mat-form-field>
           <mat-label>Deadline : YYYY-MM-DD</mat-label>
-          <input matInput type="text" formControlName="deadline" required />
-          <mat-error *ngIf="loginForm.get('deadline').hasError"
-            >Please set your deadline</mat-error
-          >
+          <input matInput [matDatepicker]="picker" formControlName="deadline" required>
+          <mat-error *ngIf="loginForm.get('deadline').hasError">Please set your deadline</mat-error>
+          <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
         </mat-form-field>
     </div>
 
