--- a/src/app/drivenform/driven/driven.component.html
+++ b/src/app/drivenform/driven/driven.component.html
@@ -1,6 +1,6 @@
 
 
-<form (ngsubmit = "submit()")>
+<form >
 <mat-form-field>
     <mat-label>Username</mat-label>
     <input matInput type="text" name="user">
