--- a/src/app/reativeform/reactiveform/reactiveform.component.scss
+++ b/src/app/reativeform/reactiveform/reactiveform.component.scss
@@ -4,10 +4,11 @@ form{
 }
 
 .form-container{
-    width: 50%;
+    width: 49%;
     box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;
     padding: 20px;
-    margin: 20px auto;
+    // margin: 20px auto;
+    // display: flex;
 }
 
 .full-width mat-form-field{
