--- a/src/app/reativeform/reactiveform/reactiveform.component.scss
+++ b/src/app/reativeform/reactiveform/reactiveform.component.scss
@@ -1,16 +1,31 @@
 form{
     display: flex;
     flex-direction: column;
+    padding-left: 50%;
 }
 
+
 .form-container{
-    width: 49%;
+    width: 40%;
     box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;
     padding: 20px;
-    // margin: 20px auto;
-    // display: flex;
+   
+}
+
+.todoList{
+    width: 48%;
+    padding: 10px;
+     display: grid;
+    grid-template-columns: repeat(2, 1fr);
+
+   
 }
 
 .full-width mat-form-field{
     width: 100%;
+}
+.card{
+    width: 300px;
+    height: fit-content;
+    background-color: cornsilk;
 }
